syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Pause {
  rpc Create(PauseRequest) returns (PauseResponse) {}
}

enum PauseType {
  STANDARD = 0;
  EXCEPTIONAL = 1;
}

message PauseRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
  PauseType type = 3;
  string value_product_id = 4;
  string account_id = 5;
}

message PauseResponse {
  string resposne_info = 1;
  string pause_id = 2;
}

